# rust-particle

./: Cargo.toml  README.md
docs/: main.md
src/: lib.rs
src/core/: mod.rs  space.rs
src/shape/: mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
